--- a/app/src/main/res/layout/card_lista_usuarios_admin.xml
+++ b/app/src/main/res/layout/card_lista_usuarios_admin.xml
@@ -6,9 +6,9 @@
     android:layout_margin="10dp"
     android:gravity="center">
 
-    <!-- Card del servicio -->
+    <!-- Card -->
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card_specialist"
+        android:id="@+id/card_usuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -22,7 +22,7 @@
 
             <!-- Imagen del cliente -->
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/imagen_cliente"
+                android:id="@+id/imagen_usuario"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="15dp"
@@ -35,24 +35,24 @@
 
             <!-- Nombre del servicio -->
             <TextView
-                android:id="@+id/txt_nombreCliente"
+                android:id="@+id/txt_nombreUsuario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/nombredelcliente"
+                android:text="@string/nombredelUsuario"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:layout_marginStart="15dp"
-                android:layout_toEndOf="@id/imagen_cliente"
+                android:layout_toEndOf="@id/imagen_usuario"
                 android:layout_marginTop="10dp"/>
 
             <!-- Campo de texto para el nombre del cliente -->
             <TextView
-                android:id="@+id/nombreCliente"
+                android:id="@+id/nombreUsuario"
                 android:layout_width="260dp"
                 android:layout_height="30dp"
-                android:layout_toEndOf="@id/imagen_cliente"
-                android:layout_below="@id/txt_nombreCliente"
+                android:layout_toEndOf="@id/imagen_usuario"
+                android:layout_below="@id/txt_nombreUsuario"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="15dp"
                 android:textColor="@color/white"
