--- a/app/src/main/res/layout/perfil_especialista.xml
+++ b/app/src/main/res/layout/perfil_especialista.xml
@@ -228,7 +228,7 @@
                     android:layout_marginBottom="-0.5dp"
                     android:layout_gravity="top"
                     android:gravity="center_horizontal|center_vertical"
-                    android:text="Ciudad:"
+                    android:text="@string/ciudad_especialista"
                     android:textStyle="bold"
                     android:textColor="#FF000000"
                     android:textSize="20sp"
