--- a/app/src/main/res/layout/perfil_especialista_admin.xml
+++ b/app/src/main/res/layout/perfil_especialista_admin.xml
@@ -1,18 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/drawable_shape"
-    tools:context=".Admin.ProfileClientAdmin">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Specialist.ProfileSpecialist"
+    >
 
-    <!-- Header -->
     <TextView
-        android:id="@+id/perfilcliente"
+        android:id="@+id/perfilespecialista"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:text="@string/titulo_perfil_clientes"
+        android:text="@string/titulo_perfil_especialistas"
         android:textSize="30sp"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -20,9 +21,10 @@
         android:gravity="center"
         android:padding="25dp"
         />
+    />
 
     <ImageView
-        android:id="@+id/flechavolver_listaclientes"
+        android:id="@+id/flechavolver_listaespecialistas"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="20dp"
@@ -33,7 +35,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/perfilcliente"
+        android:layout_below="@id/perfilespecialista"
         android:layout_above="@+id/menu">
 
         <RelativeLayout
@@ -41,7 +43,7 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/imgPerfilCliente"
+                android:id="@+id/imgPerfilEspecialista"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
                 android:layout_marginTop="30dp"
@@ -54,12 +56,10 @@
                 android:id="@+id/LLbtnsimagen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/imgPerfilCliente"
+                android:layout_below="@id/imgPerfilEspecialista"
                 android:layout_marginTop="10dp"
                 android:layout_centerHorizontal="true"
                 android:orientation="horizontal">
-
-
 
                 <Button
                     android:id="@+id/btnEliminar"
@@ -92,23 +92,25 @@
                     android:textSize="20sp"
                     android:layout_marginStart="25dp"/>
 
+
                 <TextView
                     android:id="@+id/edNombre"
+                    android:drawableStart="@drawable/logo_persona"
                     android:layout_width="347dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="start"
                     android:layout_marginStart="23dp"
-                    android:drawableStart="@drawable/logo_persona"
                     android:drawableTint="@color/gris"
                     android:drawablePadding="18dp"
+                    android:inputType="text"
                     android:background="@drawable/image_rectangle1"
                     android:paddingStart="10dp"
                     android:paddingTop="13dp"
                     android:paddingBottom="10dp"
                     android:textColor="@color/black"
                     android:textSize="16sp"
-                    android:inputType="text" />
+                    />
 
 
                 <TextView
@@ -128,21 +130,22 @@
 
                 <TextView
                     android:id="@+id/edRut"
+                    android:drawableStart="@drawable/ic_rut"
                     android:layout_width="347dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="start"
                     android:layout_marginStart="23dp"
-                    android:drawableStart="@drawable/ic_rut"
                     android:drawableTint="@color/gris"
                     android:drawablePadding="18dp"
+                    android:inputType="text"
                     android:background="@drawable/image_rectangle1"
                     android:paddingStart="10dp"
                     android:paddingTop="13dp"
                     android:paddingBottom="10dp"
                     android:textColor="@color/black"
                     android:textSize="16sp"
-                    android:inputType="number"/>
+                    />
 
 
                 <TextView
@@ -161,14 +164,48 @@
 
                 <TextView
                     android:id="@+id/edCorreo"
+                    android:drawableStart="@drawable/ic_email"
                     android:layout_width="347dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="start"
                     android:layout_marginStart="23dp"
-                    android:drawableStart="@drawable/ic_email"
                     android:drawableTint="@color/gris"
                     android:drawablePadding="18dp"
+                    android:inputType="text"
+                    android:background="@drawable/image_rectangle1"
+                    android:paddingStart="10dp"
+                    android:paddingTop="13dp"
+                    android:paddingBottom="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    />
+
+                <TextView
+                    android:id="@+id/txtCiudad"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="-0.5dp"
+                    android:layout_gravity="top"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="@string/ciudad_especialista"
+                    android:textStyle="bold"
+                    android:textColor="#FF000000"
+                    android:textSize="20sp"
+                    android:layout_marginStart="30dp"/>
+
+                <TextView
+                    android:id="@+id/edCiudad"
+                    android:drawableStart="@drawable/location_city_24"
+                    android:layout_width="347dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="23dp"
+                    android:drawableTint="@color/gris"
+                    android:drawablePadding="18dp"
+                    android:inputType="text"
                     android:background="@drawable/image_rectangle1"
                     android:paddingStart="10dp"
                     android:paddingTop="13dp"
@@ -194,39 +231,127 @@
 
                 <TextView
                     android:id="@+id/edTelefono"
+                    android:drawableStart="@drawable/ic_phone2"
                     android:layout_width="347dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="5dp"
                     android:layout_gravity="start"
                     android:layout_marginStart="23dp"
-                    android:drawableStart="@drawable/ic_phone2"
                     android:drawableTint="@color/gris"
                     android:drawablePadding="18dp"
+                    android:inputType="text"
                     android:background="@drawable/image_rectangle1"
                     android:paddingStart="10dp"
                     android:paddingTop="13dp"
                     android:paddingBottom="10dp"
                     android:textColor="@color/black"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+                    />
+
+
+                <TextView
+                    android:id="@+id/txtEspecialidad"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="-0.5dp"
+                    android:layout_gravity="top"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="@string/profesi_n_especialidad"
+                    android:textStyle="bold"
+                    android:textColor="#FF000000"
+                    android:textSize="20sp"
+                    android:layout_marginStart="30dp"
+                    />
+
+                <TextView
+                    android:id="@+id/edEspecialidad"
+                    android:drawableStart="@drawable/logo_inge"
+                    android:layout_width="347dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="23dp"
+                    android:drawableTint="@color/gris"
+                    android:drawablePadding="18dp"
+                    android:inputType="text"
+                    android:background="@drawable/image_rectangle1"
+                    android:paddingStart="10dp"
+                    android:paddingTop="13dp"
+                    android:paddingBottom="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    />
+
+                <TextView
+                    android:id="@+id/txt_servicios_especialista"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="-0.5dp"
+                    android:layout_gravity="top"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="@string/txt_servicios_especialista"
+                    android:textStyle="bold"
+                    android:textColor="#FF000000"
+                    android:textSize="20sp"
+                    android:layout_marginStart="30dp"
+                    />
 
                 <Button
-                    android:id="@+id/btnEliminarPerfilCliente"
+                    android:id="@+id/btn_servicios_especialista"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="5dp"
-                    android:text="@string/btn_eliminar_cliente"
+                    android:text="@string/btn_servicios_especialista"
                     android:textSize="20sp"
                     />
 
+                <TextView
+                    android:id="@+id/txt_antecedentes_especialista"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="-0.5dp"
+                    android:layout_gravity="top"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="@string/txt_antecedentes_especialista"
+                    android:textStyle="bold"
+                    android:textColor="#FF000000"
+                    android:textSize="20sp"
+                    android:layout_marginStart="30dp"
+                    />
+
+                <Button
+                    android:id="@+id/btn_antecedentes_especialista"
+                    android:layout_width="wrap_content"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="5dp"
+                    android:text="@string/btn_antecedentes_especialista"
+                    android:textSize="20sp"
+                    />
+
+
+                <Button
+                    android:id="@+id/btnEliminarPerfilEspecialista"
+                    android:layout_width="wrap_content"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="5dp"
+                    android:text="@string/btn_eliminar_especialista"
+                    android:textSize="20sp"
+                    />
 
             </LinearLayout>
 
         </RelativeLayout>
 
     </ScrollView>
-
 
     <TextView
         android:id="@+id/menu"
