--- a/app/src/main/res/layout/ver_servicios_especialista_admin.xml
+++ b/app/src/main/res/layout/ver_servicios_especialista_admin.xml
@@ -1,8 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="@color/white"
+    android:background="@color/color_navbar_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -11,29 +12,25 @@
     <TextView
         android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
-        android:background="@color/header"
+        android:layout_height="wrap_content"
+        android:text="@string/titulo_servicios_especialista"
+        android:textSize="30sp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         android:gravity="center"
         android:padding="25dp"
-        android:text="@string/titulo_lista_clientes"
-        android:textColor="@color/white"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        />
 
     <ImageView
-        android:id="@+id/flechavolver_menu"
+        android:id="@+id/flechavolver_perfilespecialista"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="11dp"
         android:layout_marginTop="35dp"
         android:src="@drawable/ic_flechavolver"
         />
 
-    <!-- Contenido de las cards comentarios  -->
+    <!-- Contenido de las cards servicios  -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -42,7 +39,7 @@
         android:background="@color/white"
         >
         <LinearLayout
-            android:id="@+id/clientes_container"
+            android:id="@+id/servicios_container_admin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
