--- a/app/src/main/res/layout/perfil_personal_especialista.xml
+++ b/app/src/main/res/layout/perfil_personal_especialista.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main"
-    tools:context=".Specialist.PersonalProfileSpecialist"
+    tools:context=".Client.PersonalProfileSpecialist"
     >
 
     <!-- Título de la vista -->
