--- a/app/src/main/res/layout/clientes_comentarios.xml
+++ b/app/src/main/res/layout/clientes_comentarios.xml
@@ -59,4 +59,18 @@
             />
     </ScrollView>
 
+    <!-- Loader -->
+    <RelativeLayout
+        android:id="@+id/loader_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </RelativeLayout>
+
 </RelativeLayout>
