--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -151,7 +151,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
         android:layout_below="@+id/rectangle4"
-        android:onClick="outSession"/>
+        android:onClick="GoServicesRequests"/>
 
     <TextView
         android:id="@+id/Nombre5"
@@ -159,7 +159,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
         android:layout_marginTop="50dp"
-        android:text="@string/cerrar_sesion"
+        android:text="Solicitudes cliente"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -171,7 +171,7 @@
         android:layout_height="24dp"
         android:layout_marginStart="23dp"
         android:layout_marginTop="50dp"
-        android:src="@drawable/logout"
+        android:src="@drawable/ic_category"
         android:layout_below="@+id/ico_user4" />
 
     <ImageView
@@ -182,5 +182,44 @@
         android:layout_marginTop="50dp"
         android:src="@drawable/flecha_desplegable"
         android:layout_below="@+id/despliege4" />
+
+    <View
+        android:id="@+id/rectangle6"
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
+        android:layout_below="@+id/rectangle5"
+        android:onClick="outSession"/>
+
+    <TextView
+        android:id="@+id/Nombre6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="50dp"
+        android:text="@string/cerrar_sesion"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_below="@+id/Nombre5"/>
+    <ImageView
+        android:id="@+id/ico_user7"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/logout"
+        android:layout_below="@+id/ico_user6" />
+
+    <ImageView
+        android:id="@+id/despliege6"
+        android:layout_width="20dp"
+        android:layout_height="22dp"
+        android:layout_marginStart="350dp"
+        android:layout_marginTop="50dp"
+        android:src="@drawable/flecha_desplegable"
+        android:layout_below="@+id/despliege5" />
 
 </RelativeLayout>
