--- a/app/src/main/res/layout/list_specialist_client.xml
+++ b/app/src/main/res/layout/list_specialist_client.xml
@@ -1,11 +1,10 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
-    android:background="@color/color_navbar_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_navbar_home"
     tools:context=".MainActivity">
 
     <!-- Header -->
@@ -13,15 +12,14 @@
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Servicios"
-        android:textSize="30sp"
-        android:layout_marginBottom="-15dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
+        android:layout_alignParentTop="true"
         android:background="@color/header"
         android:gravity="center"
         android:padding="25dp"
-        />
+        android:text="Servicios"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <!-- Flecha para volver al menú -->
     <ImageView
@@ -31,7 +29,8 @@
         android:layout_marginTop="35dp"
         android:src="@drawable/ic_flechavolver"
         android:onClick="backMenu"
-        />
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/header"/>
 
     <!-- Campo de búsqueda -->
     <com.google.android.material.textfield.TextInputLayout
@@ -43,17 +42,15 @@
         android:layout_gravity="center"
         app:startIconDrawable="@drawable/ic_editar">
 
-
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/search_filter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Buscar..."
-            android:padding="10dp"
-            android:paddingStart="42dp"
             android:inputType="text"
             android:background="@drawable/image_rectangle1"
-            />
+            android:padding="10dp"
+            android:paddingStart="42dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Spinner para seleccionar la ciudad -->
@@ -62,8 +59,8 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/search_filter_layout"
-        android:layout_margin="10dp"
         android:layout_centerHorizontal="true"
+        android:layout_margin="10dp"
         app:boxBackgroundMode="filled"
         app:boxCornerRadiusTopStart="10dp"
         app:boxCornerRadiusTopEnd="10dp"
@@ -74,8 +71,8 @@
             android:id="@+id/city_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:background="@drawable/image_rectangle1"/>
+            android:background="@drawable/image_rectangle1"
+            android:padding="10dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- RecyclerView para las cards de especialistas -->
@@ -85,5 +82,35 @@
         android:layout_height="match_parent"
         android:layout_below="@id/city_spinner_layout"
         android:background="@color/white"
-        android:padding="10dp"/>
+        android:padding="10dp" />
+
+    <!-- Loader Layout -->
+    <RelativeLayout
+        android:id="@+id/loader_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:gravity="center"
+        android:background="@drawable/backgroundapp">
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
+                android:layout_width="134dp"
+                android:layout_height="106dp"
+                android:layout_gravity="center" />
+
+            <ImageView
+                android:id="@+id/appIcon"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@mipmap/ic_launcher4"
+                android:layout_gravity="center" />
+        </FrameLayout>
+    </RelativeLayout>
 </RelativeLayout>
