--- a/app/src/main/res/layout/clientes_comentarios.xml
+++ b/app/src/main/res/layout/clientes_comentarios.xml
@@ -28,7 +28,7 @@
         android:layout_marginStart="11dp"
         android:layout_marginTop="35dp"
         android:src="@drawable/ic_flechavolver"
-        android:onClick="backDetailService"
+        android:onClick="backMenu"
         />
 
     <Button
