--- a/app/src/main/res/layout/list_specialist_client.xml
+++ b/app/src/main/res/layout/list_specialist_client.xml
@@ -29,6 +29,7 @@
         android:layout_marginTop="35dp"
         android:src="@drawable/ic_flechavolver"
         android:onClick="backMenu"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_below="@id/header"/>
 
