--- a/app/src/main/res/layout/ver_especialistas_admin.xml
+++ b/app/src/main/res/layout/ver_especialistas_admin.xml
@@ -1,6 +1,6 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:background="@color/white"
     android:layout_width="match_parent"
@@ -8,21 +8,49 @@
     tools:context=".MainActivity">
 
     <!-- Header -->
-    <TextView
-        android:id="@+id/header"
+    <RelativeLayout
+        android:id="@+id/header_layout"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
+        android:layout_height="wrap_content"
         android:background="@color/header"
-        android:gravity="center"
-        android:padding="25dp"
-        android:text="@string/titulo_lista_especialistas"
-        android:textColor="@color/white"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+        android:padding="25dp">
+
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/titulo_lista_especialistas"
+            android:textSize="30sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            />
+
+        <!-- Campo de búsqueda dentro del header -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/search_filter_specialists_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/header"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:startIconDrawable="@drawable/ic_editar">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/search_filter_specialists"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Buscar..."
+                android:inputType="text"
+                android:background="@drawable/image_rectangle1"
+                android:padding="10dp"
+                android:paddingStart="42dp"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/flechavolver_menu"
@@ -31,13 +59,15 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="35dp"
         android:src="@drawable/ic_flechavolver"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
         />
 
     <!-- Contenido de las cards especialistas -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/header"
+        android:layout_below="@id/header_layout"
         android:layout_above="@+id/menu"
         android:background="@color/white"
         >
