--- a/app/src/main/res/layout/fragment_home_client.xml
+++ b/app/src/main/res/layout/fragment_home_client.xml
@@ -1,93 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/drawable_shape"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="@drawable/drawable_shape">
 
-    <TextView
-        android:id="@+id/header"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/titulo_home"
-        android:textSize="30sp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:background="@color/header"
-        android:gravity="center"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:paddingStart="25dp"
-        android:paddingEnd="25dp"/>
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/container_image"
-        android:layout_width="212dp"
-        android:layout_height="222dp"
-        android:layout_marginTop="110dp"
-        android:src="@drawable/container_image"
-        />
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:text="@string/titulo_home"
+            android:textSize="22sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:background="@color/header"
+            android:gravity="center"
+            android:paddingTop="15dp"
+            android:paddingBottom="5dp"
+            android:paddingStart="25dp"
+            android:paddingEnd="25dp"
+            android:layout_alignParentTop="true"/>
 
-    <TextView
-        android:id="@+id/text_trabajo_recompensado"
-        android:layout_width="218dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="190dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginTop="180dp"
-        android:gravity="center_horizontal"
-        android:includeFontPadding="false"
-        android:text="@string/text1_home"
-        android:textColor="#FF33353C"
-        android:textSize="22sp"
-        />
+        <ImageView
+            android:id="@+id/container_image"
+            android:layout_width="240dp"
+            android:layout_height="240dp"
+            android:layout_below="@id/header"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/container_image"/>
 
-    <TextView
-        android:id="@+id/text_ayuda_necesitas"
-        android:layout_width="247dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="130dp"
-        android:layout_marginEnd="26dp"
-        android:layout_marginTop="520dp"
-        android:gravity="end"
-        android:text="@string/text2_home"
-        android:textColor="#FF33353C"
-        android:textSize="20sp"
-        />
+        <TextView
+            android:id="@+id/text_trabajo_recompensado"
+            android:layout_width="300dp"
+            android:layout_height="30dp"
+            android:layout_below="@id/container_image"
+            android:layout_marginTop="10dp"
+            android:layout_centerHorizontal="true"
+            android:gravity="center_horizontal"
+            android:includeFontPadding="false"
+            android:text="@string/text1_home"
+            android:textColor="#FF33353C"
+            android:textSize="22sp"/>
 
-    <TextView
-        android:id="@+id/text_servicio_calidad"
-        android:layout_width="323dp"
-        android:layout_height="60dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_gravity="center"
-        android:layout_marginBottom="10dp"
-        android:text="@string/text3_home"
-        android:textAlignment="center"
-        android:textColor="#FF282828"
-        android:textSize="22sp"
-        />
+        <TextView
+            android:id="@+id/text_ayuda_necesitas"
+            android:layout_width="200dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginStart="170dp"
+            android:gravity="end"
+            android:text="@string/text2_home"
+            android:textColor="#FF33353C"
+            android:layout_below="@+id/text_servicio_calidad"
+            android:textSize="20sp"/>
 
-    <ImageView
-        android:id="@+id/container_image1"
-        android:layout_width="159dp"
-        android:layout_height="231dp"
-        android:layout_marginTop="480dp"
-        android:src="@drawable/container_image1"
-        />
+        <TextView
+            android:id="@+id/text_servicio_calidad"
+            android:layout_width="210dp"
+            android:layout_height="120dp"
+            android:layout_below="@id/text_trabajo_recompensado"
+            android:layout_marginTop="50dp"
+            android:layout_marginStart="170dp"
+            android:text="@string/text3_home"
+            android:textAlignment="textEnd"
+            android:textColor="#FF282828"
+            android:textSize="20sp"/>
 
-    <TextView
-        android:id="@+id/text_garantia_clientes"
-        android:layout_width="217dp"
-        android:layout_height="72dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="580dp"
-        android:layout_marginEnd="30dp"
-        android:gravity="end"
-        android:text="@string/text4_home"
-        android:textColor="#FF282828"
-        android:textSize="19sp" />
+        <ImageView
+            android:id="@+id/container_image1"
+            android:layout_width="190dp"
+            android:layout_height="300dp"
+            android:layout_above="@+id/footer"
+            android:layout_marginBottom="60dp"
+            android:src="@drawable/container_image1"/>
+
+        <TextView
+            android:id="@+id/text_garantia_especialistas"
+            android:layout_width="217dp"
+            android:layout_height="72dp"
+            android:layout_below="@id/container_image1"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:gravity="end"
+            android:text="@string/text4_home"
+            android:textColor="#FF282828"
+            android:textSize="19sp"/>
+
+        <TextView
+            android:id="@+id/footer"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/header"/>
+    </RelativeLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
