--- a/app/src/main/res/layout/ver_detalle_servicios_especialista.xml
+++ b/app/src/main/res/layout/ver_detalle_servicios_especialista.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main"
-    tools:context=".Specialist.ViewSpecialistDetailService"
-    >
+    tools:context=".Specialist.ViewSpecialistDetailService">
 
     <!-- Título de la vista -->
     <TextView
@@ -21,8 +19,7 @@
         android:background="@color/header"
         android:gravity="center"
         android:includeFontPadding="false"
-        android:padding="25dp"
-        />
+        android:padding="25dp"/>
 
     <!-- Botón con ícono para volver atrás -->
     <ImageButton
@@ -31,8 +28,7 @@
         android:layout_marginStart="11dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/ic_flechavolver"
-        android:onClick="backServices"
-        />
+        android:onClick="backServices"/>
 
     <RelativeLayout
         android:id="@+id/containerimgrating"
@@ -53,10 +49,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/radius2"
-            />
-
+            app:shapeAppearanceOverlay="@style/radius2"/>
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/estadoservicio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Estado"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@id/containerimgrating"
+        android:layout_marginEnd="14dp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"/>
 
     <!-- Nombre del servicio -->
     <TextView
@@ -64,14 +70,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/containerimgrating"
-
         android:layout_marginStart="35dp"
         android:layout_marginTop="15dp"
         android:text="@string/nombreservicio"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/nombre_servicio_layout"
         android:layout_width="350dp"
@@ -80,8 +85,8 @@
         android:layout_marginEnd="30dp"
         android:layout_marginTop="5dp"
         android:layout_gravity="center"
-        android:layout_below="@id/txt_nombreServicio"
-        >
+        android:layout_below="@id/txt_nombreServicio">
+
         <TextView
             android:id="@+id/nombre_servicio"
             android:layout_width="match_parent"
@@ -89,8 +94,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:paddingTop="5dp"
-            android:background="@drawable/image_rectangle1"
-            />
+            android:background="@drawable/image_rectangle1"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Categoría del servicio -->
@@ -104,8 +108,8 @@
         android:text="@string/categoriaservicio"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/categoria_servicio_layout"
         android:layout_width="350dp"
@@ -114,8 +118,8 @@
         android:layout_marginEnd="30dp"
         android:layout_marginTop="5dp"
         android:layout_gravity="center"
-        android:layout_below="@id/txt_categoria"
-        >
+        android:layout_below="@id/txt_categoria">
+
         <TextView
             android:id="@+id/categoria_servicio"
             android:layout_width="match_parent"
@@ -123,8 +127,7 @@
             android:paddingStart="10dp"
             android:paddingTop="5dp"
             android:paddingEnd="10dp"
-            android:background="@drawable/image_rectangle1"
-            />
+            android:background="@drawable/image_rectangle1"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Descripción del servicio -->
@@ -138,8 +141,8 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:layout_marginTop="5dp"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/descripcion_servicio_layout"
         android:layout_width="350dp"
@@ -148,8 +151,8 @@
         android:layout_marginEnd="30dp"
         android:layout_marginTop="5dp"
         android:layout_gravity="center"
-        android:layout_below="@id/txt_descripcion"
-        >
+        android:layout_below="@id/txt_descripcion">
+
         <TextView
             android:id="@+id/descripcion_servicio"
             android:layout_width="match_parent"
@@ -157,8 +160,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:paddingTop="5dp"
-            android:background="@drawable/image_rectangle1"
-            />
+            android:background="@drawable/image_rectangle1"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Precio del servicio -->
@@ -172,8 +174,8 @@
         android:text="@string/precio_servicio"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:textStyle="bold"
-        />
+        android:textStyle="bold"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/precio_servicio_layout"
         android:layout_width="350dp"
@@ -182,8 +184,8 @@
         android:layout_marginEnd="30dp"
         android:layout_marginTop="5dp"
         android:layout_gravity="center"
-        android:layout_below="@id/txt_Precio"
-        >
+        android:layout_below="@id/txt_Precio">
+
         <TextView
             android:id="@+id/precio_servicio"
             android:layout_width="match_parent"
@@ -191,8 +193,7 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:paddingTop="5dp"
-            android:background="@drawable/image_rectangle1"
-            />
+            android:background="@drawable/image_rectangle1"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Imagen del timbre de antecedentes -->
@@ -206,8 +207,7 @@
         android:layout_marginEnd="30dp"
         android:layout_below="@+id/precio_servicio_layout"
         android:layout_toEndOf="@+id/botoncomentarios"
-        android:src="@drawable/timbre_antecedentes"
-        />
+        android:src="@drawable/timbre_antecedentes"/>
 
     <!-- Botón que redirige a la vista de comentarios -->
     <Button
@@ -220,8 +220,7 @@
         android:text="@string/btncomentarios"
         android:textSize="18sp"
         android:includeFontPadding="false"
-        android:onClick="goToComments"
-        />
+        android:onClick="goToComments"/>
 
     <!-- Botón que redirige a la vista de servicios -->
     <Button
@@ -234,7 +233,5 @@
         android:text="@string/btnservicios"
         android:textSize="18sp"
         android:includeFontPadding="false"
-        android:onClick="goToServices"
-        />
-
+        android:onClick="goToServices"/>
 </RelativeLayout>
