--- a/app/src/main/res/layout/perfil_especialista.xml
+++ b/app/src/main/res/layout/perfil_especialista.xml
@@ -152,40 +152,24 @@
                     android:layout_marginStart="30dp"
                     />
 
-                <LinearLayout
-                    android:layout_width="347dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp">
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/rut_especialista_layout"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:startIconDrawable="@drawable/ic_rut">
-
-                        <EditText
-                            android:id="@+id/edRut"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:paddingStart="10dp"
-                            android:paddingTop="15dp"
-                            android:background="@drawable/image_rectangle1"
-                            android:inputType="number"
-                            android:focusable="false"
-                            android:focusableInTouchMode="false"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <ImageButton
-                        android:layout_marginTop="5dp"
-                        android:id="@+id/btnEditRut"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/image_pencil"
-                        android:background="?attr/selectableItemBackgroundBorderless"/>
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/edRut"
+                    android:layout_width="300dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="23dp"
+                    android:drawableStart="@drawable/ic_rut"
+                    android:drawableTint="@color/gris"
+                    android:drawablePadding="18dp"
+                    android:inputType="text"
+                    android:background="@drawable/image_rectangle1"
+                    android:paddingStart="10dp"
+                    android:paddingTop="13dp"
+                    android:paddingBottom="10dp"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    />
 
                 <TextView
                     android:id="@+id/txtCorreo"
