--- a/app/src/main/res/layout/ver_comentarios_especialista.xml
+++ b/app/src/main/res/layout/ver_comentarios_especialista.xml
@@ -21,14 +21,16 @@
         android:gravity="center"
         android:padding="25dp"
         />
-    <ImageView
-        android:id="@+id/flechavolver_comments"
+    <ImageButton
+        android:id="@+id/imgbtnvolver"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="35dp"
-        android:src="@drawable/ic_flechavolver"
-        />
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="40dp"
+        android:layout_gravity="top"
+        android:background="@drawable/ic_flechavolver"
+        android:scaleType="centerInside"
+        android:onClick="goBack"/>
 
     <!-- Contenido de las cards comentarios  -->
     <ScrollView
