botón eliminar nuevamente agregado..
Error externo.

--- a/app/src/main/res/layout/item_servicio.xml
+++ b/app/src/main/res/layout/item_servicio.xml
@@ -12,10 +12,9 @@
         android:layout_width="350dp"
         android:layout_height="260dp"
         android:layout_gravity="center"
-        android:clickable="false"
-        android:focusable="false"
         app:cardBackgroundColor="@color/color_servicio"
         app:shapeAppearanceOverlay="@style/radius5"
+        android:onClick="goDetail"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="1dp">
 
@@ -24,6 +23,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <!-- Botón de eliminar servicio -->
+            <ImageButton
+                android:id="@+id/btnEliminarServicio"
+                android:layout_width="50dp"
+                android:layout_height="32dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="6dp"
+                android:layout_marginTop="5dp"
+                android:paddingHorizontal="10dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/eliminar"
+                android:contentDescription="@string/eliminar_servicio"
+                android:layout_alignParentTop="true"
+                android:scaleType="fitCenter"
+                app:tint="@color/red2" />
 
             <!-- Imagen del servicio -->
             <com.google.android.material.imageview.ShapeableImageView
