Arreglo de errores
Se arreglo errores de volver atras y el actualizar datos en perfil especialista.

--- a/app/src/main/res/layout/cliente_perfil_especialista.xml
+++ b/app/src/main/res/layout/cliente_perfil_especialista.xml
@@ -49,7 +49,7 @@
             android:layout_gravity="top|start"
             android:layout_centerHorizontal="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/perfil_especialista"
+            android:background="@drawable/imagen_login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
