--- a/app/src/main/res/layout/admin_card_lista_usuarios.xml
+++ b/app/src/main/res/layout/admin_card_lista_usuarios.xml
@@ -31,7 +31,8 @@
                 android:scaleType="centerCrop"
                 app:shapeAppearanceOverlay="@style/radius3"
                 android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"/>
+                android:layout_centerVertical="true"
+                android:src="@drawable/imagen_login"/>
 
             <!-- Nombre del servicio -->
             <TextView
