--- a/app/src/main/res/layout/admin_card_servicios_especialista.xml
+++ b/app/src/main/res/layout/admin_card_servicios_especialista.xml
@@ -32,7 +32,9 @@
                 android:scaleType="centerCrop"
                 app:shapeAppearanceOverlay="@style/radius5"
                 android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"/>
+                android:layout_centerVertical="true"
+                android:src="@drawable/perfil_especialista"
+                />
 
             <!-- Nombre del servicio -->
             <TextView
