--- a/app/src/main/res/layout/admin_card_solicitudes.xml
+++ b/app/src/main/res/layout/admin_card_solicitudes.xml
@@ -21,7 +21,9 @@
             android:scaleType="centerCrop"
             android:layout_margin="10dp"
             app:shapeAppearanceOverlay="@style/radius6"
-            android:contentDescription="" />
+            android:contentDescription=""
+            android:src="@drawable/perfil_especialista"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
