--- a/app/src/main/res/layout/admin_detalles_servicio_especialista.xml
+++ b/app/src/main/res/layout/admin_detalles_servicio_especialista.xml
@@ -34,192 +34,208 @@
         android:src="@drawable/ic_flechavolver"
         />
 
-    <RelativeLayout
-        android:id="@+id/containerimgrating"
+    <!-- ScrollView que contiene el contenido -->
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp">
+        android:layout_height="match_parent"
+        android:layout_below="@id/header"
+        android:layout_above="@id/menu"
+        android:fillViewport="true">
 
-        <!-- Foto del servicio -->
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imageServiceSpecialist"
-            android:layout_width="150dp"
-            android:layout_height="125dp"
-            android:layout_marginHorizontal="130dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/perfil_especialista"
-            app:shapeAppearanceOverlay="@style/radius2"
-            />
-
-    </RelativeLayout>
-
-    <!-- Nombre del servicio -->
-    <TextView
-        android:id="@+id/txt_nombreServicio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/containerimgrating"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="15dp"
-        android:text="@string/nombreservicio"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        />
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/nombre_servicio_layout"
-        android:layout_width="350dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="center"
-        android:layout_below="@id/txt_nombreServicio"
-        >
-        <TextView
-            android:id="@+id/nombre_servicio"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:paddingTop="5dp"
-            android:background="@drawable/image_rectangle1"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="wrap_content">
 
-    <!-- Categoría del servicio -->
-    <TextView
-        android:id="@+id/txt_categoria"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="5dp"
-        android:layout_below="@+id/nombre_servicio_layout"
-        android:text="@string/categoriaservicio"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        />
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/categoria_servicio_layout"
-        android:layout_width="350dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="center"
-        android:layout_below="@id/txt_categoria"
-        >
-        <TextView
-            android:id="@+id/categoria_servicio"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:paddingStart="10dp"
-            android:paddingTop="5dp"
-            android:paddingEnd="10dp"
-            android:background="@drawable/image_rectangle1"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+            <RelativeLayout
+                android:id="@+id/containerimgrating"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp">
 
-    <!-- Descripción del servicio -->
-    <TextView
-        android:id="@+id/txt_descripcion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_below="@+id/categoria_servicio_layout"
-        android:text="@string/descripcion_servicio"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:layout_marginTop="5dp"
-        android:textStyle="bold"
-        />
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/descripcion_servicio_layout"
-        android:layout_width="350dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="center"
-        android:layout_below="@id/txt_descripcion"
-        >
-        <TextView
-            android:id="@+id/descripcion_servicio"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:paddingTop="5dp"
-            android:background="@drawable/image_rectangle1"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+                <!-- Foto del servicio -->
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/imageServiceSpecialist"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_marginHorizontal="130dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/perfil_especialista"
+                    app:shapeAppearanceOverlay="@style/radius2"
+                    />
 
-    <!-- Precio del servicio -->
-    <TextView
-        android:id="@+id/txt_Precio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="5dp"
-        android:layout_below="@+id/descripcion_servicio_layout"
-        android:text="@string/precio_servicio"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        />
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/precio_servicio_layout"
-        android:layout_width="350dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginTop="5dp"
-        android:layout_gravity="center"
-        android:layout_below="@id/txt_Precio"
-        >
-        <TextView
-            android:id="@+id/precio_servicio"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:paddingTop="5dp"
-            android:background="@drawable/image_rectangle1"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+            </RelativeLayout>
 
-    <!-- Botón que redirige a la vista de comentarios -->
-    <Button
-        android:id="@+id/botoncomentarios"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="118dp"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/precio_servicio_layout"
-        android:text="@string/btncomentarios"
-        android:textSize="18sp"
-        android:includeFontPadding="false"
-        android:onClick="goToComments"
-        />
+            <!-- Nombre del servicio -->
+            <TextView
+                android:id="@+id/txt_nombreServicio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/containerimgrating"
+                android:layout_marginStart="35dp"
+                android:layout_marginTop="20dp"
+                android:text="@string/nombreservicio"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/nombre_servicio_layout"
+                android:layout_width="350dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center"
+                android:layout_below="@id/txt_nombreServicio"
+                >
+                <TextView
+                    android:id="@+id/nombre_servicio"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingTop="5dp"
+                    android:background="@drawable/image_rectangle1"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- Botón para eliminar el servicio completo -->
-    <Button
-        android:id="@+id/btnEliminarServicioAdmin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="100dp"
-        android:layout_marginBottom="10dp"
-        android:layout_below="@+id/botoncomentarios"
-        android:text="@string/btn_eliminar_servicio_admin"
-        android:textSize="18sp"
-        android:includeFontPadding="false"
-        android:backgroundTint="@color/red"/>
+            <!-- Categoría del servicio -->
+            <TextView
+                android:id="@+id/txt_categoria"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="35dp"
+                android:layout_marginTop="5dp"
+                android:layout_below="@+id/nombre_servicio_layout"
+                android:text="@string/categoriaservicio"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/categoria_servicio_layout"
+                android:layout_width="350dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center"
+                android:layout_below="@id/txt_categoria"
+                >
+                <TextView
+                    android:id="@+id/categoria_servicio"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:paddingStart="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingEnd="10dp"
+                    android:background="@drawable/image_rectangle1"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
 
+            <!-- Descripción del servicio -->
+            <TextView
+                android:id="@+id/txt_descripcion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="35dp"
+                android:layout_below="@+id/categoria_servicio_layout"
+                android:text="@string/descripcion_servicio"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:layout_marginTop="5dp"
+                android:textStyle="bold"
+                />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/descripcion_servicio_layout"
+                android:layout_width="350dp"
+                android:layout_height="70dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center"
+                android:layout_below="@id/txt_descripcion"
+                >
+                <TextView
+                    android:id="@+id/descripcion_servicio"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingTop="5dp"
+                    android:background="@drawable/image_rectangle1"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <!-- Precio del servicio -->
+            <TextView
+                android:id="@+id/txt_Precio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="35dp"
+                android:layout_marginTop="5dp"
+                android:layout_below="@+id/descripcion_servicio_layout"
+                android:text="@string/precio_servicio"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/precio_servicio_layout"
+                android:layout_width="350dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center"
+                android:layout_below="@id/txt_Precio"
+                >
+                <TextView
+                    android:id="@+id/precio_servicio"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingTop="5dp"
+                    android:background="@drawable/image_rectangle1"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <!-- Botón que redirige a la vista de comentarios -->
+            <Button
+                android:id="@+id/botoncomentarios"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="118dp"
+                android:layout_marginTop="20dp"
+                android:layout_below="@+id/precio_servicio_layout"
+                android:text="@string/btncomentarios"
+                android:textSize="18sp"
+                android:includeFontPadding="false"
+                android:onClick="goToComments"
+                />
+
+            <!-- Botón para eliminar el servicio completo -->
+            <Button
+                android:id="@+id/btnEliminarServicioAdmin"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="100dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="15dp"
+                android:layout_below="@+id/botoncomentarios"
+                android:text="@string/btn_eliminar_servicio_admin"
+                android:textSize="18sp"
+                android:includeFontPadding="false"
+                android:backgroundTint="@color/red"/>
+        </RelativeLayout>
+    </ScrollView>
+
+    <!-- Menú en la parte inferior -->
     <TextView
         android:id="@+id/menu"
         android:layout_width="match_parent"
-        android:layout_height="105dp"
+        android:layout_height="100dp"
         android:text="@string/titulo_menu"
         android:textSize="30sp"
         android:textColor="@color/white"
@@ -228,7 +244,5 @@
         android:gravity="center"
         android:padding="25dp"
         android:layout_alignParentBottom="true"
-        android:layout_below="@id/btnEliminarServicioAdmin"
         />
-
 </RelativeLayout>
