--- a/app/src/main/res/layout/cliente_card_especialistas.xml
+++ b/app/src/main/res/layout/cliente_card_especialistas.xml
@@ -30,7 +30,9 @@
                 android:scaleType="centerCrop"
                 app:shapeAppearanceOverlay="@style/radius5"
                 android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"/>
+                android:layout_centerVertical="true"
+                android:src="@drawable/imagen_login"
+                />
 
             <!-- Nombre del servicio -->
             <TextView
