--- a/app/src/main/res/layout/especialista_card_servicios.xml
+++ b/app/src/main/res/layout/especialista_card_servicios.xml
@@ -33,7 +33,9 @@
                 android:scaleType="centerCrop"
                 app:shapeAppearanceOverlay="@style/radius5"
                 android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"/>
+                android:layout_centerVertical="true"
+                android:src="@drawable/perfil_especialista"
+                />
 
             <!-- Botón de eliminar servicio -->
             <ImageButton
